--- a/gba_core/Makefile
+++ b/gba_core/Makefile
@@ -2,21 +2,23 @@
 CC      = arm-none-eabi-gcc
 OBJCOPY = arm-none-eabi-objcopy
 
-# Nombre del juego
+# Nombre del proyecto
 NAME    = rom
 
-# Flags de compilación para GBA (Arquitectura ARM7TDMI)
+# Flags de compilación para GBA
 CFLAGS  = -mthumb -mthumb-interwork -O2 -Wall -specs=gba.specs
 
-# Regla principal
+# Regla por defecto
 all: $(NAME).gba
 
-# Crear el archivo .gba desde el .elf
+# Regla para crear el binario final (IMPORTANTE: La linea de abajo necesita TAB)
 $(NAME).gba: $(NAME).elf
-➡️$(OBJCOPY) -O binary $(NAME).elf $(NAME).gba  <-- ¡AQUÍ VA UN TAB!
+	$(OBJCOPY) -O binary $(NAME).elf $(NAME).gba
 
+# Regla para compilar el codigo C (IMPORTANTE: La linea de abajo necesita TAB)
 $(NAME).elf: main.c
-➡️$(CC) $(CFLAGS) main.c -o $(NAME).elf         <-- ¡AQUÍ TAMBIÉN!
+	$(CC) $(CFLAGS) main.c -o $(NAME).elf
 
+# Limpieza
 clean:
- rm -f *.elf *.gba
+	rm -f *.elf *.gba
