--- a/.github/workflows/gba_ci.yml
+++ b/.github/workflows/gba_ci.yml
@@ -1,13 +1,11 @@
 name: GBA Compilation System
 
-# ACTIVADORES
 on:
   push:
     paths:
       - '**/*.c'
       - '**/*.h'
       - 'Makefile'
-  # ESTO HABILITA EL BOTÓN MANUAL
   workflow_dispatch: 
 
 jobs:
@@ -17,11 +15,19 @@ jobs:
     container: devkitpro/devkitarm
     
     steps:
-      # 1. Bajar el código
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # 2. Compilar (Make)
+      # --- PASO DE DIAGNÓSTICO NUEVO ---
+      - name: 🔍 DIAGNOSTICO (X-RAY)
+        run: |
+          echo "=== DÓNDE ESTOY ==="
+          pwd
+          echo "=== LISTADO COMPLETO DE ARCHIVOS ==="
+          find . -maxdepth 3 -not -path '*/.*'
+          echo "=== DETALLE DE SRC ==="
+          ls -la src/ || echo "❌ LA CARPETA SRC NO EXISTE"
+
       - name: Run Make
         id: make
         run: |
@@ -29,21 +35,15 @@ jobs:
           make 2> error_log.txt
         continue-on-error: true
 
-      # 3. SI FALLA: Enviar reporte a Lia (Método Seguro)
       - name: Report Error to Lia
         if: steps.make.outcome == 'failure'
         run: |
           echo "❌ COMPILATION FAILED"
-          # Usamos --data-binary @archivo para enviar el archivo tal cual
-          # Esto evita errores de comillas o espacios en el shell
           curl -X POST "https://lia-project-manager.onrender.com/" \
           -H "Content-Type: text/plain" \
           --data-binary "@error_log.txt"
-          
-          # Forzamos fallo en GitHub para que salga rojo
           exit 1
 
-      # 4. SI FUNCIONA: Guardar el .gba
       - name: Upload GBA ROM
         if: steps.make.outcome == 'success'
         uses: actions/upload-artifact@v4
